--- a/styles/aboutus.css
+++ b/styles/aboutus.css
@@ -2,10 +2,11 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  
 }
 
 .container {
@@ -13,13 +14,53 @@ body {
   color: #fff;
   padding: 20px;
   text-align: center;
+  max-width: 400px;
+  border-radius: 10px;
+  display: flex; /* Added */
+  flex-direction: column; /* Added */
+  justify-content: center; /* Added */
+  align-items: center; /* Added */
+  margin: 0 auto;
+ 
 }
 
 .header {
   font-size: 24px;
   font-weight: bold;
-  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
+  background-color: white;
+  text-align: center;
+  padding: 20px;
 }
+
+.content {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.content img {
+  width: 30px;
+  margin: 0 5px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .feedback-text {
   font-size: 18px;
