--- a/styles/appoint.css
+++ b/styles/appoint.css
@@ -4,9 +4,9 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  display: flex;
-  justify-content: center;
+ justify-content: center;
   align-items: center;
+  min-height: 100vh;
 }
 
 header {
@@ -18,8 +18,16 @@ header {
   background-color: rgb(255, 255, 255);
   border-radius: 20px;
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
+}
+
+.container {
+  background-color: #0072C6;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+  max-width: 400px;
+  border-radius: 10px;
 }
 
 .header .logo-and-links {
@@ -39,6 +47,7 @@ header {
   display: flex;
   flex-direction: row;
   gap: 40px;
+  justify-content: space-between;
 }
 
 header .logo-and-links .links a {
@@ -81,6 +90,7 @@ nav ul li a {
   text-align: center;
   padding: 50px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -160,7 +170,7 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: blue;
+  background-color: blue;
   background-color: #333;
   padding: 10px;
 }
