--- a/styles/login.css
+++ b/styles/login.css
@@ -1,3 +1,12 @@
+body{
+    display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+min-height: 100vh;
+margin: 0;
+padding: 0;
+}
 
 .header{
     width: 90%;
@@ -8,6 +17,11 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin-bottom: 20px;
  }
 
 
@@ -17,6 +31,8 @@
     gap: 10px;
     align-items: center;
     height: 100%;
+    justify-content: space-between;
+    margin-bottom: 20px;
     
     }
 
@@ -59,5 +75,6 @@ header .logo-and-links .links a{
     width: 30px;
     height: 30px;
 }
+
 
 
