--- a/styles/aboutus.css
+++ b/styles/aboutus.css
@@ -1,90 +1,130 @@
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
+body{
+  margin: 0px;
   align-items: center;
+  justify-content: center;
+}
+
+.header{
+  width: 100%;
+  height: 20px;
+  background-color: blue;
+}
+.header .links{
+  width: 90%;
+  margin-left: 5%;
+  color:  white;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  padding-left: 10px;
+  gap: 10px;
+}
+
+.header .links a{
+  color: #fff;
+  text-decoration: none;
+  font-size: 18px;
+}
+
+.container{
+width: 90%;
+margin-left: 5%;
+}
+
+.container .product-list{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.container .product-list .product-item{
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: blue;
+  color: #fff;
+}
+
+.container .product-list .product-item img{
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+
+.about-us{
+
+}
+
+.about-us .image{
+background-color: blue;
+width:5%
+
+}
+
+.about-us .image img{
+width: 60px;
+height: 70px;
+border-radius: 45px;
+
+}
+
+.products{
+
+}
+
+.container2{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: blue;
+  color: #fff;
+
+}
+
+.container2 .feature{
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+
+}
+
+.container2 .feature img{
+  width: 50%;
+  height: 225px;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+
+.images-section {
+  display: flex;
+  justify-content: space-around;
+  margin: 20px;
+  border-radius: 20px;
+}
+
+.images-section img {
+  width: 45%;
+  height: 300px;
+  gap: 10px;
+  justify-content: space-between;
   
 }
 
-.container {
-  background-color: #0072C6;
-  color: #fff;
-  padding: 20px;
-  text-align: center;
-  max-width: 400px;
-  border-radius: 10px;
-  display: flex; /* Added */
-  flex-direction: column; /* Added */
-  justify-content: center; /* Added */
-  align-items: center; /* Added */
-  margin: 0 auto;
- 
+ul {
+  list-style-type: disc;
+  padding-left: 20px;
 }
 
-.header {
-  font-size: 24px;
-  font-weight: bold;
-  display: flex;
-  align-items: center;
-  margin: 0 auto;
-  background-color: white;
-  text-align: center;
-  padding: 20px;
+li {
+  color: #333;
 }
 
-.content {
-  margin-top: 20px;
-  text-align: center;
-}
-
-.content img {
-  width: 30px;
-  margin: 0 5px;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.feedback-text {
-  font-size: 18px;
-  margin-bottom: 20px;
-}
-
-.review-box {
-  background-color: #ffeb3b;
-  padding: 20px;
-  margin-bottom: 20px;
-  border-radius: 5px;
-}
-
-.rating {
-  font-size: 24px;
-  font-weight: bold;
-  margin-bottom: 10px;
-}
-
-.submit-button {
-  background-color: red;
-  color: #fff;
-  border: none;
-  padding: 10px 20px;
-  font-size: 16px;
-  cursor: pointer;
+.footer{
+  background-color: blue;
+  width: 100%;
+  height: 10px;
 }
