--- a/styles/appoint.css
+++ b/styles/appoint.css
@@ -1,16 +1,18 @@
 body {
   font-family: Arial, sans-serif;
-  background-color: #f5f5f5;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
  justify-content: center;
   align-items: center;
   min-height: 100vh;
+  background-color: blue;
+  color: #fff;
+  
 }
 
-header {
-  background-color: #333;
+.header {
+  
   padding: 10px;
   width: 90%;
   height: 60px;
@@ -27,6 +29,7 @@ header {
   padding: 20px;
   text-align: center;
   max-width: 400px;
+  height: 500px;;
   border-radius: 10px;
 }
 
@@ -36,11 +39,14 @@ header {
   gap: 10px;
   align-items: center;
   height: 100%;
+  align-content: center;
+  background-color: #fff;
 }
 
 .header .logo-and-links .logo {
   width: 60px;
   height: 100%;
+  align-content: center;
 }
 
 .header .logo-and-links .links {
@@ -69,6 +75,8 @@ header .logo-and-links .links a {
   height: 30px;
 }
 
+
+
 nav ul {
   list-style-type: none;
   padding: 0;
@@ -85,15 +93,20 @@ nav ul li a {
   color: white;
 }
 
+
+
+
 .banner {
-  background-color: #f5f5f5;
+  
   text-align: center;
   padding: 50px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  
 }
+
 
 .login-section {
   text-align: center;
@@ -114,6 +127,7 @@ nav ul li a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: #1973fa;
 }
 
 h2 {
@@ -126,6 +140,9 @@ form {
   justify-content: center;
   align-items: center;
 }
+
+
+
 
 label {
   margin-bottom: 10px;
@@ -146,11 +163,15 @@ button {
   border: none;
   border-radius: 5px;
   cursor: pointer;
-}
+  padding: 10px 20px;
+  background-color: #4CAF50;
+ }
 
 button:hover {
   background-color: #555;
-}
+
+  }
+
 
 p {
   text-align: center;
@@ -158,7 +179,7 @@ p {
 }
 
 a {
-  color: blue;
+  color: rgb(10, 14, 248);
   text-decoration: none;
 }
 
@@ -166,11 +187,19 @@ a:hover {
   text-decoration: underline;
 }
 
-footer {
+
+
+
+
+.footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: blue;
-  background-color: #333;
+  background-color: rgb(255, 255, 255);
+  
+  color: rgb(8, 8, 8);
   padding: 10px;
 }
+
+
+
