--- a/styles/index.css
+++ b/styles/index.css
@@ -7,6 +7,7 @@ body {
     align-items: center;
     justify-content: center;
     min-height: 100vh;
+    background-color: rgb(114, 114, 255) 
     }
     
     .header {
@@ -45,6 +46,7 @@ body {
     .header .icons {
     display: flex;
     align-items: center;
+ 
     }
     
     .header .icons > div {
@@ -114,20 +116,22 @@ body {
     }
     
     .banner {
-    width: 50%;
+    width: 25%;
     height: 300px;
     background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
+    color: rgb(255, 255, 255);
     }
     
     .banner img {
-    width: 40%;
-    height: 50%;
+    width: 200px;
+    height: 200px;
     object-fit: cover;
     align-items: center;
+
     }
     
     .banner div {
@@ -137,9 +141,24 @@ body {
     justify-content: center;
     align-items: center;
     }
+
+   
+
+    .services{background-color: 
+        color: antiquewhite;
+    }
+
+    .services img{
+      height: 200px;
+        
+    }
+
     
     .button {
     background-color: orange;
+    color: white;
+    cursor: pointer;
+    
     }
     
     .footer { background-color: blue;
