--- a/styles/login.css
+++ b/styles/login.css
@@ -6,6 +6,10 @@ justify-content: center;
 min-height: 100vh;
 margin: 0;
 padding: 0;
+background-color: rgb(216, 2, 216);
+font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+color: antiquewhite;
+
 }
 
 .header{
@@ -46,7 +50,8 @@ padding: 0;
 .header .logo-and-links .links{
     display: flex;
     flex-direction: row;
-    gap: 40px;
+    gap: 20px;
+    justify-content: space-between;
     
     
     
@@ -75,6 +80,108 @@ header .logo-and-links .links a{
     width: 30px;
     height: 30px;
 }
+
+.container{
+    background-color: rgb(0, 162, 255);
+    align-items: center;
+    
+}
+
+.container .image{
+    width: 100%;
+    height: 100%;
+    margin-left: -250px;
+    height: auto;
+}
+   
+       
+   .container .image img{
+       width: 100%;
+       height: 100%;
+       object-fit: cover;
+       display: flex;
+       align-items: center;
+       margin-left: -200px;
+ }
+
+    .container .login-details{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        padding: 20px;
+        gap: 10px;
+        width: 80%;
+        margin: 20px auto;
+        padding: 20px;
+        
+      
+    
+    }
+
+
+    .container .login-details p {
+        color: rgb(255, 255, 255);
+        font-size: 18px;
+        
+    }
+
+.container .login-details input{
+        height: 35px;
+        border-radius: 10px;
+        border: 1px solid rgba(0, 0, 0, 0.2);
+        outline: none;
+        transition: all .5s ease-in-out;
+    }
+
+.container .login-details input :focus{
+ outline: 3px solid rgba(18, 231, 18, 1);
+
+    }
+   
+
+
+
+
+
+
+  
+  .login-form form {
+    display: grid;
+    gap: 10px;
+    margin-bottom: 20px;
+  }
+  
+  .login-form label {
+    color: #333;
+    padding: 10px;
+    font-size: 16px;
+  }
+  
+  .login-form input,
+  .login-form textarea {
+    padding: 8px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+  }
+  
+  . button {
+    padding: 10px 20px;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    background-color: pink;
+    width: 20px;
+    height: 30px;
+    border: none;
+    border-radius: 10px;
+  }
+  
+  .login-form button:hover {
+    background-color: #45a049;
+  }
+  
 
 
 
