--- a/styles/trouble.css
+++ b/styles/trouble.css
@@ -54,6 +54,7 @@
     margin-top: 20px;
     background-color: yellow;
     padding: 20px;
+    color: white; /* Set the text color to white */
   }
   
   button {
@@ -81,12 +82,13 @@
     color: white;
   }
   
-  .banner {
+  .container {
     background-color: #f5f5f5;
     text-align: center;
     padding: 50px;
     margin: 0 auto;
-    max-width: 800px;
+    max-width: 80px;
+    width: 60px;
   }
   
   footer {
