--- a/styles/user.css
+++ b/styles/user.css
@@ -13,6 +13,7 @@
             min-height: 100vh;
             margin: 0;
             padding: 0;
+            background-color: #4CAF50;
         }
 
         .container {
@@ -20,7 +21,10 @@
             color: #fff;
             padding: 20px;
             text-align: center;
-            text-align: center;
+            max-width: 400px;
+            margin: 0 auto;
+            padding: 20px;
+            border-radius: 5px;
             
         }
 
@@ -30,6 +34,9 @@
             margin-bottom: 20px;
             justify-content: space-between;
             margin-bottom: 10px;
+            width: 100%;
+            
+            
         }
 
         .header .links{
@@ -63,4 +70,46 @@
             font-size: 16px;
             cursor: pointer;
         }
+
+        
  
+        .container input[type="submit"] {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            float: right;
+          }
+      
+          .container input[type="submit"]:hover {
+            background-color: red;
+        }
+
+
+      
+          .container h2 {
+            text-align: center;
+            margin-bottom: 20px;
+          }
+      
+          .container label {
+            font-weight: bold;
+          }
+      
+          .container input[type="text"],
+          .container textarea {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+          }
+      
+          .container textarea {
+            height: 100px;
+          }
+      
+          
