--- a/styles/index.css
+++ b/styles/index.css
@@ -7,7 +7,7 @@ body {
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background-color: rgb(114, 114, 255) 
+    background-color: rgb(0, 0, 255) 
     }
     
     .header {
@@ -21,6 +21,7 @@ body {
     align-items: center;
     justify-content: center;
     text-align: center;
+    
     }
     
     .header .logo-and-links {
@@ -124,6 +125,8 @@ body {
     align-items: center;
     text-align: center;
     color: rgb(255, 255, 255);
+    background-color: rgb(0, 162, 255);
+
     }
     
     .banner img {
@@ -144,8 +147,9 @@ body {
 
    
 
-    .services{background-color: 
+    .services{
         color: antiquewhite;
+        font-size: larger;
     }
 
     .services img{
@@ -161,9 +165,10 @@ body {
     
     }
     
-    .footer { background-color: blue;
-        width: 100%;
-        height: 20px;
+    .footer { background-color: white;
+        width: 90%;
+        border-radius: 10px;
+        height: 60px;
         align-items: center;
         text-align: center; 
     }
