--- a/styles/techrep.css
+++ b/styles/techrep.css
@@ -4,6 +4,18 @@ body {
   align-items: center;
   height: 100vh;
   color: antiquewhite;
+
+}
+
+.header {
+  width: 100%;
+  height: 40px;
+  background-color: white;
+}
+
+.header .links{
+  gap: 10px;
+  justify-content: space-between;
 }
 
 .container {
@@ -13,47 +25,41 @@ body {
   align-items: center;
 }
 
-.banner {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100px;
 
-}
-
-
-.content-img{
-
-}
-
-.context-text{
-
-
-}
-
-
-
-
-.banner img{
-  width: 60px;
-  height: 70px;
-}
-
-.login-section {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-form {
+.container .banner {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 200px;
 }
 
-footer {
+
+.container .banner img {
+  width: 60px;
+  height: 70px;
+  border-radius: 10px;
+}
+
+.container .content-image {
+  width: 75%;
+  height: 200px;
+}
+
+.container .content-image img {
+  width: 100%;
+  height: 100%;
+}
+
+.container .context-text {
+  color: white;
+}
+
+.footer {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  height: 40px;
+  background-color: white;
 }
