--- a/styles/appoint.css
+++ b/styles/appoint.css
@@ -6,10 +6,11 @@ body {
  justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: linear-gradient(to right, #584cff, #e100ff);
+  background: linear-gradient(to right, #1000f7, #fdfdfd);
   color: #fff;
   
 }
+
 
 .header {
   
@@ -18,6 +19,7 @@ body {
   height: 60px;
   margin: 5%;
   background-color: rgb(255, 255, 255);
+  width: 100%;
   border-radius: 20px;
   display: flex;
   justify-content: space-between;
@@ -64,6 +66,23 @@ body {
   justify-content: space-between;
   
 }
+
+.contents{
+  background: linear-gradient(to bottom, #a200ff, #0022fc);
+
+}
+
+.appointment{
+  width: 700px;
+  margin-left: 500px;
+  border-style: dashed;
+}
+
+
+
+
+
+
 
 header .logo-and-links .links a {
   color: black;
@@ -125,9 +144,13 @@ nav ul li a {
   align-items: center;
 }
 
+
+
+
+
+
 .container {
   width: 300px;
-  background-color: white;
   padding: 20px;
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
