--- a/styles/index.css
+++ b/styles/index.css
@@ -7,12 +7,13 @@ body {
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background-color: rgb(0, 0, 255) 
+    background-color: rgb(0, 0, 255) ;
+    color: white
     }
     
     .header {
     width: 90%;
-    height: 60px;
+    height: 120px;
     margin: 5%;
     background-color: rgb(255, 255, 255);
     border-radius: 20px;
@@ -81,13 +82,14 @@ body {
     text-decoration: none;
     }
     
-    .header .icons {
+    .icons {
     height: 10px;
     width: 10px;
     display: flex;
     flex-direction: row;
-    margin-right: 10px;
-    gap: 10px;
+    margin-left: 1000px;
+    margin-bottom: 10px;
+    gap: 50px;
     align-items: center;
     display: flex;
     justify-content:space-between ;
@@ -95,7 +97,7 @@ body {
     justify-content: flex-end;
     }
     
-    .header .icons img {
+    .icons img {
     width: 40px;
     height: 40px;
     display: flex;
@@ -103,18 +105,23 @@ body {
     margin-left: 10px;
     justify-content:space-between ;
     gap: 30px;
+    margin-bottom: 100px;
+    }
    
     
-    }
-    .icons{
-    display: flex;
-    align-items: center;
-    margin-right: 100px;
-    }
+   
     
     .icons > div {
     margin-left: 10px;
     }
+
+    .info{
+        font-size: 30px;
+        margin-right: 1000px;
+        margin-bottom: -250px;
+
+    }
+
     
     .banner {
     width: 25%;
@@ -126,6 +133,8 @@ body {
     text-align: center;
     color: rgb(255, 255, 255);
     background-color: rgb(0, 162, 255);
+    margin-left: 1100px;
+    
 
     }
     
