--- a/styles/login.css
+++ b/styles/login.css
@@ -79,7 +79,130 @@ header .logo-and-links .links a{
 .header .icons img{
     width: 30px;
     height: 30px;
+  
 }
+
+.header {
+  width: 90%;
+  height: 120px;
+  margin: 5%;
+  background-color: rgb(255, 255, 255);
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  
+  }
+  
+  .header .logo-and-links {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+  margin-bottom: 20px;
+  margin-right: -150px;
+  justify-content: center;
+  }
+  
+  .header .links {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+  }
+  
+  .header .icons {
+  display: flex;
+  align-items: center;
+
+  }
+  
+  .header .icons > div {
+  margin-left: 10px;
+  }
+  
+  
+  
+  .header .logo-and-links .logo {
+  width: 30px;
+  height: 25%;
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+  }
+  
+  .header .logo-and-links .links {
+  display: flex;
+  flex-direction: row;
+  gap: 40px;
+  position: absolute;
+  margin-left: -100px;
+  justify-content: center;
+  margin-top: 10px;
+  justify-content: space-between;
+  
+  }
+  
+  header .logo-and-links .links a {
+  color: black;
+  text-decoration: none;
+  }
+  
+  .icons {
+  height: 10px;
+  width: 10px;
+  display: flex;
+  flex-direction: row;
+  margin-left: 1000px;
+  margin-bottom: 10px;
+  gap: 50px;
+  align-items: center;
+  display: flex;
+  justify-content:space-between ;
+  display: flex;
+  justify-content: flex-end;
+  }
+  
+  .icons img {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  position: absolute;
+  margin-left: 10px;
+  justify-content:space-between ;
+  gap: 30px;
+  margin-bottom: 100px;
+  }
+ 
+  
+ 
+  
+  .icons > div {
+  margin-left: 10px;
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .container{
     background-color: rgb(0, 162, 255);
