--- a/styles/user.css
+++ b/styles/user.css
@@ -6,14 +6,12 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
             min-height: 100vh;
             margin: 0;
             padding: 0;
-            background-color: #4CAF50;
+            background: linear-gradient(to right, #ffffff, #0000ff);
         }
 
         .container {
@@ -31,18 +29,134 @@
         .header {
             font-size: 24px;
             font-weight: bold;
-            margin-bottom: 20px;
+            margin-bottom: 150px;
             justify-content: space-between;
-            margin-bottom: 10px;
-            width: 100%;
+           width: 100%;
+           background-color: white;
+
             
             
         }
 
         .header .links{
             text-align: center;
+            gap: 10px;
             justify-content: space-between;
         }
+
+        
+
+        .header {
+          width: 90%;
+          height: 120px;
+          margin: 5%;
+          background-color: rgb(255, 255, 255);
+          border-radius: 20px;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          text-align: center;
+          
+          }
+          
+          .header .logo-and-links {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          width: 100%;
+          display: flex;
+          flex-direction: column;
+          gap: 10px;
+          align-items: center;
+          margin-bottom: 20px;
+          margin-right: -150px;
+          justify-content: center;
+          }
+          
+          .header .links {
+          display: flex;
+          justify-content: center;
+          margin-top: 10px;
+          }
+          
+          .header .icons {
+          display: flex;
+          align-items: center;
+       
+          }
+          
+          .header .icons > div {
+          margin-left: 10px;
+          }
+          
+          
+          
+          .header .logo-and-links .logo {
+          width: 30px;
+          height: 25%;
+          display: flex;
+          justify-content: center;
+          margin-top: 10px;
+          }
+          
+          .header .logo-and-links .links {
+          display: flex;
+          flex-direction: row;
+          gap: 40px;
+          position: absolute;
+          margin-left: -100px;
+          justify-content: center;
+          margin-top: 10px;
+          justify-content: space-between;
+          
+          }
+          
+          header .logo-and-links .links a {
+          color: black;
+          text-decoration: none;
+          }
+          
+          .icons {
+          height: 10px;
+          width: 10px;
+          display: flex;
+          flex-direction: row;
+          margin-left: 1000px;
+          margin-bottom: 10px;
+          gap: 50px;
+          align-items: center;
+          display: flex;
+          justify-content:space-between ;
+          display: flex;
+          justify-content: flex-end;
+          }
+          
+          .icons img {
+          width: 40px;
+          height: 40px;
+          display: flex;
+          position: absolute;
+          margin-left: 10px;
+          justify-content:space-between ;
+          gap: 30px;
+          margin-bottom: 100px;
+          }
+         
+          
+         
+          
+          .icons > div {
+          margin-left: 10px;
+          }
+
+
+
+
+
+
+
+
 
         .feedback-text {
             font-size: 18px;
@@ -69,6 +183,7 @@
             padding: 10px 20px;
             font-size: 16px;
             cursor: pointer;
+            margin-left: -100px;
         }
 
         
